--- a/src/main/resources/message_zh-CN.yml
+++ b/src/main/resources/message_zh-CN.yml
@@ -1,6 +1,8 @@
 Util_WrongNum: "§c数字解析错误"
 Util_WrongCommand: "§c参数错误"
 Util_NoPermission: "§c你没有使用该指令的权限"
+Util_ArenaNotFound: "§c该名字的场地不存在！"
+
 Item_ChangeHeading_Up: "§e改变移动方向: §e§l上"
 Item_ChangeHeading_Down: "§e改变移动方向: §e§l下"
 Item_ChangeHeading_Left: "§e改变移动方向: §e§l左"
@@ -8,8 +10,10 @@ Item_ChangeHeading_Right: "§e改变移动方向: §e§l右"
 Item_ChangeHeading_Lore: "§b落地后改变蛇的移动方向！"
 Item_Leave: "§e离开此场地"
 Item_Leave_Lore: "§b拿着它左键/右键就可以离开此场地啦"
+
 Game_CountDown: "§e&l10秒后游戏开始！"
 Game_Loss: "§c&l你输啦！"
+
 Command_CommandManager_NoCommandInConsole: "§c请勿在控制台使用指令"
 SubCommand_Create_Usage: "§a用法：/snake create <名字> <最大蛇数> <每条蛇玩家数>: 以当前所在位置为重生点新建一个场地"
 SubCommand_Create_ArenaExist: "§c该名字的场地已经存在了"
@@ -33,6 +37,21 @@ SubCommand_Set_LeavePosSuccess: "§a设置成功"
 SubCommand_Start_Usage: "§a用法：/snake start <场地>: 强制开始一个场地的游戏"
 SubCommand_Start_ArenaNotExist: "§c该名字的场地不存在"
 SubCommand_Start_AlreadyStart: "§c该场地已经开始了"
+SubCommand_Status_Usage: "§a用法：/snake status <场地>: 查看一个场地的信息"
 SubCommand_Stop_Usage: "§a用法：/snake stop <场地>: 强制结束一个场地的游戏"
 SubCommand_Stop_ArenaNotExist: "§c该名字的场地不存在"
 SubCommand_Stop_NotInGame: "§c该场地已经结束了"
+
+SnakeGame_ArenaName: "§a场地名字:§c§l"
+SnakeGame_SnakeNum: "§a最大蛇数量:§c§l"
+SnakeGame_PlayerPerSnake: "§a每条蛇玩家数量:§c§l"
+SnakeGame_FoodNum: "§a食物点数量:§c§l"
+SnakeGame_SpawnNum: "§a出生点数量:§c§l"
+SnakeGame_GameStatus: "§a游戏状态:§c§l"
+SnakeGame_InGame: "游戏中"
+SnakeGame_Waiting: "等待中"
+SnakeGame_PlayerNum: "§a当前玩家数:§c§l"
+Snake_Status: "§a当前蛇的状态:§c§l"
+Snake_Status_Dead: "死亡"
+Snake_Status_Alive: "存活"
+Snake_Player: "§a玩家:§c§l"
