add feature: display current heading at boss bar

--- a/src/main/resources/message_zh-CN.yml
+++ b/src/main/resources/message_zh-CN.yml
@@ -55,3 +55,8 @@ Snake_Status: "§a当前蛇的状态:§c§l"
 Snake_Status_Dead: "死亡"
 Snake_Status_Alive: "存活"
 Snake_Player: "§a玩家:§c§l"
+Snake_Facing_Up: "§a当前指向为：§c§l上"
+Snake_Facing_Down: "§a当前指向为：§c§l下"
+Snake_Facing_Left: "§a当前指向为：§c§l左"
+Snake_Facing_Right: "§a当前指向为：§c§l右"
+Snake_Facing_Null: "§a当前指向不是正方向"
