add feature: minimal snake num to start a game. add feature: game will automatically start when snake num is enough. add feature: config now can control more options about food.

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,6 +2,9 @@ Language: zh-CN
 
 Game:
   FoodPercentage: 0.05
+  MaxMoveTools: 30
+  ToolsPerFood: 5
+  InitialTools: 10
 
 Sound:
   PlayEatSound: true
