--- a/src/main/resources/message_zh-CN.yml
+++ b/src/main/resources/message_zh-CN.yml
@@ -51,6 +51,8 @@ SnakeGame_GameStatus: "§a游戏状态:§c§l"
 SnakeGame_InGame: "游戏中"
 SnakeGame_Waiting: "等待中"
 SnakeGame_PlayerNum: "§a当前玩家数:§c§l"
+SnakeGame_InitialSpeed: "§a初始位移时间间隔:§c§l"
+SnakeGame_CountDown: "§a§l30秒后游戏开始！"
 Snake_Status: "§a当前蛇的状态:§c§l"
 Snake_Status_Dead: "死亡"
 Snake_Status_Alive: "存活"
