add feature: minimal snake num to start a game. add feature: game will automatically start when snake num is enough. add feature: config now can control more options about food. add feature: lobby bossBar to show prepared snake / maximum snake

--- a/src/main/resources/message_zh-CN.yml
+++ b/src/main/resources/message_zh-CN.yml
@@ -44,6 +44,7 @@ SubCommand_Stop_NotInGame: "§c该场地已经结束了"
 
 SnakeGame_ArenaName: "§a场地名字:§c§l"
 SnakeGame_SnakeNum: "§a最大蛇数量:§c§l"
+SnakeGame_MinSnakeNum: "§a最小蛇数量:§c§l"
 SnakeGame_PlayerPerSnake: "§a每条蛇玩家数量:§c§l"
 SnakeGame_FoodNum: "§a食物点数量:§c§l"
 SnakeGame_SpawnNum: "§a出生点数量:§c§l"
@@ -53,6 +54,7 @@ SnakeGame_Waiting: "等待中"
 SnakeGame_PlayerNum: "§a当前玩家数:§c§l"
 SnakeGame_InitialSpeed: "§a初始位移时间间隔:§c§l"
 SnakeGame_CountDown: "§a§l30秒后游戏开始！"
+SnakeGame_WaitingTitle : "§a当前场次需要至少<MinSnakeNum>条蛇才能开始游戏 §c§l"
 Snake_Status: "§a当前蛇的状态:§c§l"
 Snake_Status_Dead: "死亡"
 Snake_Status_Alive: "存活"
