add command: help

--- a/src/main/resources/message_zh-CN.yml
+++ b/src/main/resources/message_zh-CN.yml
@@ -18,6 +18,8 @@ Command_CommandManager_NoCommandInConsole: "§c请勿在控制台使用指令"
 SubCommand_Create_Usage: "§a用法：/snake create <名字> <最大蛇数> <每条蛇玩家数>: 以当前所在位置为重生点新建一个场地"
 SubCommand_Create_ArenaExist: "§c该名字的场地已经存在了"
 SubCommand_Create_WrongPlayerNum: "§c玩家数目必须为1/2/4"
+SubCommand_Help_Usage: "§a用法：/snake help [具体命令]: 查看指令帮助"
+SubCommand_Help_NoSuchCommand: "§c没有这个指令"
 SubCommand_Join_Usage: "§a用法：/snake join <名字>: 加入一个已经存在的场地"
 SubCommand_Join_AlreadyInArena: "§c你已经在一个场地中啦！"
 SubCommand_Join_Full: "§c该场地已经满员了"
@@ -25,8 +27,13 @@ SubCommand_Join_ArenaNotExist: "§c该名字的场地不存在"
 SubCommand_Leave_Usage: "§a用法：/snake leave: 离开当前场地"
 SubCommand_Leave_NotInGame: "§c你不在任何场地中"
 SubCommand_Leave_Success: "§a离开成功"
+SubCommand_Reload_Usage: "§a用法：/snake reload: 重载配置及场地"
+SubCommand_Save_Usage: "§a用法：/snake save: 保存场地配置"
 SubCommand_Save_Success: "§a保存成功"
 SubCommand_Set_Usage: "§a用法：/snake set <场地> food <食物点名字> <食物存在时间> <食物刷新率[1-1000)> [食物类型：NORMAL/UP/DOWN/LEFT/RIGHT]: 新增一个食物刷新点"
+SubCommand_Set_Usage2: "§a用法：/snake set <场地> beginPos : 新增一个以当前所在位置为位置的重生点"
+SubCommand_Set_Usage3: "§a用法：/snake set <场地> lobbyPos : 修改大厅位置为当前所在位置"
+SubCommand_Set_Usage4: "§a用法：/snake set <场地> leavePos : 修改离开位置为当前所在位置"
 SubCommand_Set_ArenaNotExist: "§c该名字的场地不存在"
 SubCommand_Set_FoodWrongName: "§c名字中不能包含'.'"
 SubCommand_Set_FoodAlreadyExist: "§c该名字的食物点已经存在了"
