--- a/src/main/resources/message_zh-CN.yml
+++ b/src/main/resources/message_zh-CN.yml
@@ -13,6 +13,7 @@ Item_Leave_Lore: "§b拿着它左键/右键就可以离开此场地啦"
 
 Game_CountDown: "§e&l10秒后游戏开始！"
 Game_Loss: "§c&l你输啦！"
+Game_Victory: "§a&l你赢啦！"
 
 Command_CommandManager_NoCommandInConsole: "§c请勿在控制台使用指令"
 SubCommand_Create_Usage: "§a用法：/snake create <名字> <最大蛇数> <每条蛇玩家数>: 以当前所在位置为重生点新建一个场地"
@@ -62,6 +63,8 @@ SnakeGame_PlayerNum: "§a当前玩家数:§c§l"
 SnakeGame_InitialSpeed: "§a初始位移时间间隔:§c§l"
 SnakeGame_CountDown: "§a§l30秒后游戏开始！"
 SnakeGame_WaitingTitle : "§a当前场次需要至少<MinSnakeNum>条蛇才能开始游戏 §c§l"
+SnakeGame_VictoryConditionLength: "§a胜利条件:§c§l蛇长达到至少<num>格长"
+SnakeGame_VictoryConditionSnake: "§a胜利条件:§c§l生存直至只剩最后<num>条蛇"
 Snake_Status: "§a当前蛇的状态:§c§l"
 Snake_Status_Dead: "死亡"
 Snake_Status_Alive: "存活"
