feature add: execute command when victory or loss

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -12,7 +12,7 @@ Sound:
   PlayCountDownSound: true
 
 Command:
-  #  WinCommand: give [player] diamond 1
-  WinCommand: [null]
-  #  LossCommand: kill [player]
-  LossCommand: [null]
+  WinCommand: give [player] diamond 1
+  GlobalWinCommand: [null]
+#  LossCommand: kill [player]
+  GlobalLossCommand: [null]
