--- a/src/main/resources/message_zh-CN.yml
+++ b/src/main/resources/message_zh-CN.yml
@@ -19,6 +19,11 @@ Command_CommandManager_NoCommandInConsole: "§c请勿在控制台使用指令"
 SubCommand_Create_Usage: "§a用法：/snake create <名字> <最大蛇数> <每条蛇玩家数>: 以当前所在位置为重生点新建一个场地"
 SubCommand_Create_ArenaExist: "§c该名字的场地已经存在了"
 SubCommand_Create_WrongPlayerNum: "§c玩家数目必须为1/2/4"
+SubCommand_Game_Usage: "§a用法：/snake game: 获取游戏帮助"
+SubCommand_Game_Help_1: "§a《贪吃蛇大作战！》为一款多人合作游戏。游戏中同一队玩家将分别控制蛇的移动方向，一场游戏中由多条蛇组成"
+SubCommand_Game_Help_2: "§a游戏中，每条蛇会不停地向当前指定的移动方向移动，直到蛇碰到障碍物或者蛇身撞到蛇身（其他人或自己的）"
+SubCommand_Game_Help_3: "§a队伍中的每个人都将获得他负责方向的药水，药水可以改变蛇的移动方向，当药水砸到地上时才生效"
+SubCommand_Game_Help_4: "§a游戏场地中会随机生成棕色蘑菇块——食物，四种颜色的矿物方块——补充对应颜色的药水"
 SubCommand_Help_Usage: "§a用法：/snake help [具体命令]: 查看指令帮助"
 SubCommand_Help_NoSuchCommand: "§c没有这个指令"
 SubCommand_Join_Usage: "§a用法：/snake join <名字>: 加入一个已经存在的场地"
@@ -65,6 +70,10 @@ SnakeGame_CountDown: "§a§l30秒后游戏开始！"
 SnakeGame_WaitingTitle : "§a当前场次需要至少<MinSnakeNum>条蛇才能开始游戏 §c§l"
 SnakeGame_VictoryConditionLength: "§a胜利条件:§c§l蛇长达到至少<num>格长"
 SnakeGame_VictoryConditionSnake: "§a胜利条件:§c§l生存直至只剩最后<num>条蛇"
+Snake_Welcome: "§a欢迎来到场地:§c§l"
+Snake_Welcome_Control: "§a你负责控制的方向为：§c§l"
+Snake_Welcome_Teammate: "§a当前队伍成员有:§c§l"
+Snake_Welcome_Help: "§a输入/snake game 获取游玩指南！"
 Snake_Status: "§a当前蛇的状态:§c§l"
 Snake_Status_Dead: "死亡"
 Snake_Status_Alive: "存活"
