feature add: team chat

--- a/src/main/resources/message_zh-CN.yml
+++ b/src/main/resources/message_zh-CN.yml
@@ -2,6 +2,7 @@ Util_WrongNum: "§c数字解析错误"
 Util_WrongCommand: "§c参数错误"
 Util_NoPermission: "§c你没有使用该指令的权限"
 Util_ArenaNotFound: "§c该名字的场地不存在！"
+Util_TeamChat: "§c§l[队伍]"
 
 Item_ChangeHeading_Up: "§e改变移动方向: §e§l上"
 Item_ChangeHeading_Down: "§e改变移动方向: §e§l下"
@@ -74,6 +75,7 @@ Snake_Welcome: "§a欢迎来到场地:§c§l"
 Snake_Welcome_Control: "§a你负责控制的方向为：§c§l"
 Snake_Welcome_Teammate: "§a当前队伍成员有:§c§l"
 Snake_Welcome_Help: "§a输入/snake game 获取游玩指南！"
+Snake_Welcome_Chat: "§a聊天频道已切换到小队模式，公屏聊天请在内容前置!"
 Snake_Status: "§a当前蛇的状态:§c§l"
 Snake_Status_Dead: "死亡"
 Snake_Status_Alive: "存活"
